--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -79,6 +79,10 @@ footer
 .small 
   transform: scale(.9)
 
+.blured
+  -webkit-filter: blur(5px) !important
+  filter: blur(5px) !important
+
 
 .navbar 
   border: none
@@ -407,6 +411,9 @@ input:-moz-placeholder
 .aqua-box 
   background: #2BAFCA
   text-align: center
+  -webkit-filter: blur(0px)
+  filter: blur(0px)
+  @include transition(all 2s)
   h2 
     padding: 50px 0
     margin: 0
