Styles for the form-submission page

--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -447,6 +447,8 @@ header .brand
     @media (min-width: $screen-sm) 
       width: 80%
       padding: 90px 0
+    @media (max-width: $screen-xs-max) 
+      width: 100%
 
   input 
     height: 60px
