--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -60,6 +60,14 @@ a
   &:hover 
     color: #26a0be
 
+.thank-you 
+  background: #2D2F35
+  background-image: radial-gradient(50% 100%, #373940 0%, #2D2F35 100%)
+  height: 100vh
+  a
+    color: #26a0be
+
+
 
 footer 
   padding: 40px 0
@@ -463,8 +471,8 @@ header .brand
     line-height: 31px
     margin: 0 20px 20px
     @media (max-width: $screen-xs-max)
-      width: auto
       margin: 15px 0
+      width: 100%
   input[type="submit"]
     display: block
     margin: 25px auto !important
