Firefox bug fixes

--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -365,7 +365,7 @@ header .brand
     p, h3 
       padding-left: 150px
     p 
-      margin: 15px 0 30px
+      margin: 15px 0
     .bubble 
       border: 1px solid #25B5D1
       border-radius: 40px
@@ -395,6 +395,7 @@ header .brand
         width: 100%
     .step-row 
       min-height: 150px
+      margin-bottom: 30px
       @media (max-width: $screen-xs-max)
         p
           padding-left: 0
