Tweaked second iphone screen image

--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -358,7 +358,9 @@ header .brand
     img 
       margin-bottom: 15px
       border: 2px solid #e6e6e6
-      max-width: 60%
+      max-width: 70%
+      @media (max-width: $screen-xs-max)
+        max-width: 60%
 
   .tab-text 
     p, h3 
