Mostly form changes: Not posting to PHP anymore, now validating phone input, still need to input form to Gator URL. THIS IS A CHECKPOINT COMMIT

--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -395,6 +395,7 @@ header .brand
   @media (min-width: $screen-lg)
     height: 825px
   @media (min-width: $screen-sm)
+    text-align: right
     padding-bottom: 50px
 
 
